--- a/en/team.html
+++ b/en/team.html
@@ -241,7 +241,7 @@
                         <p class="item__person-name eng-item__person-name">Sabir<span class="item__person-role eng-item__person-role">iOS developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/23.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-                        <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">iOS developer (intern)</span></p>
+                        <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">iOS developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/24.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Kirill<span class="item__person-role eng-item__person-role">Android developer</span></p>
@@ -274,29 +274,35 @@
                   <p class="item__person-name">Kirill<span class="item__person-role">Web Developer (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/50.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                        <p class="item__person-name eng-item__person-name">Vyacheslav <span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
+                        <p class="item__person-name eng-item__person-name">Vyacheslav <span class="item__person-role eng-item__person-role">Web Developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/35.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-                        <p class="item__person-name eng-item__person-name">Ivan <span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
+                        <p class="item__person-name eng-item__person-name">Ivan <span class="item__person-role eng-item__person-role">Web Developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/36.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-                        <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
+                        <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">Web Developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/37.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-                  <p class="item__person-name">Ivan <span class="item__person-role">Flutter desktop (intern)</span></p>
+                  <p class="item__person-name">Ivan <span class="item__person-role">Flutter desktop</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/52.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Nursultan<span class="item__person-role">Web Developer (intern)</span></p>
+                    <p class="item__person-name">Nursultan<span class="item__person-role">Web Developer</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/53.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Argen<span class="item__person-role">Flutter desktop (intern) </span></p>
+                    <p class="item__person-name">Argen<span class="item__person-role">Flutter desktop</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/49.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Vyacheslav<span class="item__person-role">Flutter Developer (intern) </span></p>
+                    <p class="item__person-name">Vyacheslav<span class="item__person-role">Flutter Developer</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/48.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Farkhat<span class="item__person-role">Flutter Developer (intern) </span></p>
+                    <p class="item__person-name">Farkhat<span class="item__person-role">Flutter Developer</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/51.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
+                    <p class="item__person-name">Arthur<span class="item__person-role">Flutter Developer</span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/54.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
+                    <p class="item__person-name">Vladimir<span class="item__person-role">Flutter Developer</span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/55.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
                         <p class="item__person-name eng-item__person-name">Alena <span class="item__person-role eng-item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/38.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
