--- a/ru/team.html
+++ b/ru/team.html
@@ -245,7 +245,7 @@
                         <p class="item__person-name">Сабир<span class="item__person-role">iOS разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/23.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                        <p class="item__person-name">Александр<span class="item__person-role">IOS разработчик (стажер)</span></p>
+                        <p class="item__person-name">Александр<span class="item__person-role">IOS разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/24.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
                         <p class="item__person-name">Кирилл<span class="item__person-role">Android разработчик</span></p>
@@ -275,32 +275,38 @@
                         <p class="item__person-name">Ярослав <span class="item__person-role">Android разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/34.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Кирилл<span class="item__person-role">Web разработчик (стажер)</span></p>
+                    <p class="item__person-name">Кирилл<span class="item__person-role">Web разработчик</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/50.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                        <p class="item__person-name">Вячеслав <span class="item__person-role">Web разработчик (стажер)</span></p>
+                        <p class="item__person-name">Вячеслав <span class="item__person-role">Web разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/35.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                        <p class="item__person-name">Иван <span class="item__person-role">Web разработчик (стажер)</span></p>
+                        <p class="item__person-name">Иван <span class="item__person-role">Web разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/36.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                        <p class="item__person-name">Александр<span class="item__person-role">Web разработчик (стажер)</span></p>
+                        <p class="item__person-name">Александр<span class="item__person-role">Web разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/37.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Иван<span class="item__person-role">Flutter разработчик (стажер)</span></p>
+                    <p class="item__person-name">Иван<span class="item__person-role">Flutter разработчик</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/52.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Нурсултан<span class="item__person-role">Web разработчик (стажер)</span></p>
+                    <p class="item__person-name">Нурсултан<span class="item__person-role">Web разработчик</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/53.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Арген<span class="item__person-role">Flutter разработчик(стажер) </span></p>
+                    <p class="item__person-name">Арген<span class="item__person-role">Flutter разработчик</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/49.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Вячеслав<span class="item__person-role">Flutter разработчик(стажер) </span></p>
+                    <p class="item__person-name">Вячеслав<span class="item__person-role">Flutter разработчик</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/48.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                    <p class="item__person-name">Фархат<span class="item__person-role">Flutter разработчик(стажер) </span></p>
+                    <p class="item__person-name">Фархат<span class="item__person-role">Flutter разработчик</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/51.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+                    <p class="item__person-name">Артур<span class="item__person-role">Flutter разработчик</span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/54.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+                    <p class="item__person-name">Владимир<span class="item__person-role">Flutter разработчик</span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/55.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
                         <p class="item__person-name">Алена <span class="item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/38.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
