--- a/cs/index.html
+++ b/cs/index.html
@@ -443,9 +443,9 @@
 				<article>
 					<div class="block-seven-paragraf">
 						<div class="block-six">
-							<a href="#" class="block-six-link">#SFERA</a>
-							<a href="#" class="block-six-link">#Messenger</a>
-							<a href="#" class="block-six-link">#Síť</a>
+							<a href="../cs/downloads.html" class="block-six-link">#SFERA</a>
+							<a href="../cs/downloads.html" class="block-six-link">#Messenger</a>
+							<a href="../cs/downloads.html" class="block-six-link">#Síť</a>
 						</div>
 						<p class="block-seven-p">PŘIDEJ SE</p>
 						<p class="block-seven-text">SFERA je mimo politiku. Celý svět považujeme za svůj domov a chceme pracovat ve prospěch všech lidí na planetě.</p>
