--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<img class="img_lang-tablet" src="./assets/img/language_tablet.png" alt="icon leng">
 						</div>
 						<div class="list_lang-tablet">
-							<a class="lang_list-link active" href="#"> English</a>
+							<a class="lang_list-link active" href="#">English</a>
 							<a class="lang_list-link" href="./ru/index.html">Russian</a>
 							<a class="lang_list-link" href="./cs/index.html">Ceština</a>
 						</div>
@@ -187,7 +187,7 @@
 						<div class="island_poppup-IOS1 Mac1"></div>
 					</div>
 					<div class="inner-frame-image">
-						<img class="section-two-image" src="assets/en-img/asaspandroid.png" loading="lazy" alt="iPhone News Feed"> 
+						<img class="section-two-image" src="assets/en-img/asaspandroid.png" loading="lazy" alt="android pfone News Feed"> 
 					<div class="island_poppup-Android1 And1"></div>
 				</div>
 				</div>
@@ -198,13 +198,13 @@
 				</div>
 			</section>
 			<section class="section-as" id="abot-us">
-				<p class="section-as-heading">LEARN <span class="section-as-heading-color"> MORE</span> ABOUT US</p>
+				<p class="section-as-heading">LEARN <span class="section-as-heading-color">MORE</span>ABOUT US</p>
 				<div class="section-as-video">
 					<iframe class="section-as-iframe-video" src="https://www.youtube.com/embed/Ok8da78v8tA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				</div>
 			</section>
 			<section>
-			<p class="section-about-as-heading"><span class="about-as-heading-color">BE FIRST</span> – HELP US
+			<p class="section-about-as-heading"><span class="about-as-heading-color">BE FIRST</span>– HELP US
 			TEST THE APPLICATION</p>
 			</section>
 			<section class="block-for">
@@ -214,7 +214,7 @@
 						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Blue checkmark" class="link-list-left-for">Calls</li>
 						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Blue checkmark" class="link-list-left-for">Sending messages</li>
 						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="Blue checkmark" class="link-list-left-for">Media Loading</li>
-						<li class="block-first-color-for">Chat with the founder about problems<br>ID SFERA 100 100 000 </li>
+						<li class="block-first-color-for">Chat with the founder about problems<br>ID SFERA 100 100 000</li>
 					</ul>
 				</div>
 				<div class="block-for-image">
@@ -223,7 +223,7 @@
 				</div>
 			</section>
 			<section class="section-card">
-				<p class="about-as-heading">WHAT’S OUT <span class="about-as-heading-color"> THERE RIGHT NOW</span></p>
+				<p class="about-as-heading">WHAT’S OUT <span class="about-as-heading-color">THERE RIGHT NOW</span></p>
 				<div class="card">
 					
 					<div class="card-block">
@@ -301,20 +301,16 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-
 										<img class="front" src="assets/en-img/videosios.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-4"></div>
-
 									</div>
 								</div>
 						</div>
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-
 										<img class="back" src="assets/en-img/videosandroid.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-4"></div>
-
 								</div> 
 							</div> 
 						</div>
@@ -328,10 +324,8 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-
 										<img class="front" src="assets/en-img/blacboxios.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-5"></div>
-
 									</div>
 								</div>
 						</div>
@@ -340,7 +334,6 @@
 									<div class="inner-frame">
 								  <img class="back" src="assets/en-img/blacboxandroid.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-5"></div>
-
 								</div> 
 							</div> 
 						</div>
@@ -387,7 +380,6 @@
 											<div class="inner-frame">
 												<img class="back" src="assets/en-img/meetnetandroid.png" loading="lazy" alt="iPhone News Feed"> 
 											<div class="island_poppup-Android And-7"></div>
-
 										</div> 
 									</div> 
 								</div>
@@ -442,7 +434,7 @@
 					<p class="card-block-botton">Tough choice? Askadvice from other users</p>
 				</div>
 				<div class="card-block card-block-botton eng-card-block eng-card-block-botton">
-					<a class="card-block__link eng-card-block__link"  href="./en/apps.html">SFERA Applications &#8702; </a>
+					<a class="card-block__link eng-card-block__link"  href="./en/apps.html">SFERA Applications &#8702;</a>
 				</div>
 			</div>
 		</section>
@@ -453,9 +445,9 @@
 				<div>
 					<div class="block-seven-paragraf">
 						<div class="block-six">
-							<a href="#" class="block-six-link">#SFERA</a>
-							<a href="#" class="block-six-link">#Messenger</a>
-							<a href="#" class="block-six-link">#Network</a>
+							<a href="./en/downloads.html" class="block-six-link">#SFERA</a>
+							<a href="./en/downloads.html" class="block-six-link">#Messenger</a>
+							<a href="./en/downloads.html" class="block-six-link">#Network</a>
 						</div>
 						<p class="block-seven-p">JOIN</p>
 						<p class="block-seven-text">SFERA is outside of politics. We consider the whole world our home and want to work for the benefit of all people on the planet.</p>
