--- a/ru/index.html
+++ b/ru/index.html
@@ -446,9 +446,9 @@
 				<article>
 					<div class="block-seven-paragraf">
 						<div class="block-six">
-							<a href="#" class="block-six-link">#SFERA</a>
-							<a href="#" class="block-six-link">#Мессенджер</a>
-							<a href="#" class="block-six-link">#Сеть</a>
+							<a href="../ru/downloads.html" class="block-six-link">#SFERA</a>
+							<a href="../ru/downloads.html" class="block-six-link">#Мессенджер</a>
+							<a href="../ru/downloads.html" class="block-six-link">#Сеть</a>
 						</div>
 						<p class="block-seven-p">ПРИСОЕДИНЯЙСЯ</p>
 						<p class="block-seven-text">SFERA находится в не политики.Мы считаем своим домом весь мир и хотим работать на благо всех людей на планете.</p>
